03-webserver-deployment-pattern-autoscale.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: webserver
  name: webserver-deploy
  namespace: stmapp-sp3
spec:
  replicas: 5
  selector:
    matchLabels:
      run: webserver
  template:
    metadata:
      labels:
        run: webserver
    spec:
      containers:
      #- image: stm-registry.dmp.true.th:443/webdevops/php-nginx:v1.0.1
      - image: montree/webserver:tagversion
        name: webserver
        ports:
          - containerPort: 80
        volumeMounts:
          - name: appdata-nfs
            # mount point in container
            mountPath: /app
          - name: applogs-nfs
            # mount point in container
            mountPath: /logs
      volumes:
        - name: appdata-nfs
          persistentVolumeClaim:
            # PVC name
            claimName: stm-appdata-nfs-pvc-sp3
        - name: applogs-nfs
          persistentVolumeClaim:
            # PVC name
            claimName: stm-applogs-nfs-pvc-sp3
---
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
  namespace: stmapp-sp3
  labels:
    run: webserver
spec:
  type: ClusterIP
  selector:
    run: webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource-webserver-sp3
  namespace: stmapp-sp3
spec:
  rules:
  - host: webserver.example.com
    http:
      paths:
      - backend:
          serviceName: webserver-service
          servicePort: 80
